    when printing to STDOUT (via -O).
  * Do not add architectures to .changes Architecture field for artifacts
    that are not a .deb or .udeb in dpkg-genchanges.
  * Add support for .buildinfo files:
    - Add new dpkg-genbuildinfo command.
    - Hook it into the dpkg-buildpackage machinery.
    Based on a patch by Jérémy Bobbio <lunar@debian.org>. Closes: #138409
  * Architecture support:
    - Add support for AIX operating system.
    - Add a version pseudo-field to the arch tables.
    - Internally represent Debian architectures as quadruplets.
  * Portability:
    - Cast off_t variables to intmax_t when printing them with "%jd".
    - Add missing <string.h> include in libdpkg.
    - Cast strlen() return value to ssize_t to match write() return type.
    - Use underscore-prefixed system preprocessor symbols instead of namespace
      polluting ones (such as “linux”, “OPENBSD” or “hpux”).
    - Handle _POSIX_PRIORITY_SCHEDULING being defined to -1 or 0 in
      start-stop-daemon. This affects Mac OS X.
    - On FreeBSD return STATUS_UNKNOWN instead of false in start-stop-daemon
      do_procinit().
    - Port start-stop-daemon process handling to Mac OS X.
      Based on a patch by Mo McRoberts <mo@nevali.net>.
    - Port start-stop-daemon process handling to AIX.
    - Fix lookup by name on update-alternatives --config. The code was wrong
      and not working at least on Mac OS X, making the test suite to fail.
    - Only use gzip --rsyncable in Dpkg::Compression on Debian and hopefully
      derivatives, by using perl's $Config{cf_by} variable to key on. The
      Debian-specific --rsyncable option should have never been accepted for
      use in dpkg to begin with.
    - Use our own dpkg_ar_hdr struct instead of relying on the system
      ar_hdr struct, as the ar format is not standardized and does vary
      across systems, for example on AIX.
    - Add <sys/sysmacros.h> on AIX for major() and minor().
    - Add missing <errno.h> in libcompat.