@@ -253,6 +253,8 @@ This option (since dpkg 1.18.2, long option since dpkg 1.18.8) is equivalent
 to the \fB\-j\fP option except that it does not set the \fBMAKEFLAGS\fP
 environment variable, and as such it is safer to use with any package
 including those that are not parallel-build safe.
+
+\fBauto\fP is the default behavior (since dpkg 1.18.11).
 .TP
 .BR \-D ", " \-\-check\-builddeps
 Check build dependencies and conflicts; abort if unsatisfied (long option
