@@ -66,6 +66,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     - Add new dpkg-genbuildinfo command.
     - Hook it into the dpkg-buildpackage machinery.
     Based on a patch by Jérémy Bobbio <lunar@debian.org>. Closes: #138409
+  * Enable dpkg-buildpackage -Jauto by default. Closes: #842845
   * Architecture support:
     - Add support for AIX operating system.
     - Add a version pseudo-field to the arch tables.
